<resources>
    <string name="app_name">Dature</string>

    <string name="registro_usuario">Registre Usuari</string>
    <string name="nombre">Nom</string>
    <string name="e_mail">E-mail</string>
    <string name="contrase_a">Contrasenya</string>
    <string name="repetir_contrase_a">Repetir contrasenya</string>
    <string name="usuario">Usuari</string>
    <string name="email_login">E-Mail</string>
    <string name="escribe_tu_nombre">Escriu el teu nom…</string>
    <string name="escribe_tu_usuario">Escriu el teu usuari…</string>
    <string name="escribe_tu_e_mail">Escriu el teu e-mail…</string>
    <string name="escrtibe_tu_contrase_a">Escriu la teva contrasenya…</string>
    <string name="repite_tu_contrase_a">Repeteix la contrasenya…</string>

    <string name="login">Login</string>
    <string name="registrarse">Registrar-se</string>
    <string name="catalan" translatable="false">idioma català</string>
    <string name="castellano" translatable="false">idioma castellano</string>
    <string name="ingles" translatable="false">language english</string>
    <string name="licencia">Llicència Creative Commons BY-NC-SA</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Últims Posts</string>
    <string name="menu_gallery">Penjar / Fer foto</string>
    <string name="menu_slideshow">Mapa</string>
    <string name="menu_tools">Editar Perfil</string>
    <string name="menu_share">Configuració</string>
    <string name="menu_send">Sobre nosaltres</string>

    <string name="sexo">Sexe</string>
    <string name="hombre">Home</string>
    <string name="mujer">Dona</string>
    <string name="otro">Altre</string>

    <string name="animal">Animal</string>
    <string name="no_lista">No esta en la llista:</string>
    <string name="no_nombre">No se el nom</string>
    <string name="cerrar_sesion">Tancar sessió</string>
    <!-- DEPRECATED -->
    <string-array name="animales">
        <item>Porc Senglar</item>
        <item>Esquirol</item>
        <item>Ós rentador</item>
    </string-array>
    <!-- - -->

    <string name="hacer_foto">Fer Foto</string>
    <string name="post_titulo">Títol</string>
    <string name="guardar_post">Pujar Post</string>
    <string name="title_activity_maps">Mapa</string>

    <string name="login_email" translatable="false">E-Mail</string>
    <string name="login_password">Contrasenya</string>

    <string name="edt_anarRegistre">No ets un usuari? Registrat aquí.</string>
    <string name="dature" translatable="false">Dature</string>

    <string name="desc_about_us">Som Arnau Muñoz i Diego Muñoz, dos estudiants de 2n de DAM de l\'institut Nicolau Copèrnic als que els hi hagrada la natura i la programació</string>
    <string name="droksid" translatable="false">Droksid</string>

    <string name="cargando">carregant...</string>
    <string name="autor">Autor</string>

    <string name="config_num_posts">Número de posts</string>
    <string name="config_num_mapa">Número de marcadors</string>

    <string-array name="config_choose_posts">
        <item>5</item>
        <item>10</item>
        <item>20</item>
    </string-array>

    <string-array name="config_choose_map">
        <item>100</item>
        <item>250</item>
        <item>500</item>
    </string-array>

</resources>
