<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_make_post"
            android:icon="@drawable/ic_menu_new_post"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_edit_profile"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Dature">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_menu_about_us"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
