<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.munoz.diego.projectem07.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_make_post"
        android:name="com.munoz.diego.projectem07.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.munoz.diego.projectem07.ui.mapa.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_mapa" />

    <fragment
        android:id="@+id/nav_edit_profile"
        android:name="com.munoz.diego.projectem07.ui.editar_perfil.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_editar_perfil" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.munoz.diego.projectem07.ui.configuracio.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_configuracio" />

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.munoz.diego.projectem07.ui.about_us.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_sobre_nosaltres" />
</navigation>