<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_login_register"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        style="@style/Style_text_views"
        android:layout_width="100dp"
        android:layout_height="27dp"
        android:gravity="end"
        android:text="@string/nombre"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/etNombre"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="76dp" />

    <TextView
        android:id="@+id/textView5"
        style="@style/Style_text_views"
        android:layout_width="100dp"
        android:layout_height="27dp"
        android:layout_marginTop="24dp"
        android:gravity="end"
        android:text="@string/e_mail"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView6"
        style="@style/Style_text_views"
        android:layout_width="100dp"
        android:layout_height="27dp"
        android:layout_marginTop="24dp"
        android:gravity="end"
        android:text="@string/contrase_a"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/etContrasena"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        style="@style/Style_text_views"
        android:layout_width="100dp"
        android:layout_height="27dp"
        android:layout_marginTop="24dp"
        android:gravity="end"
        android:text="@string/repetir_contrase_a"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/etContrasena2"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView4"
        style="@style/Style_text_views"
        android:layout_width="100dp"
        android:layout_height="27dp"
        android:gravity="end"
        android:text="@string/sexo"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/rg_grupo_de_sexo_uwu"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="376dp" />

    <TextView
        android:id="@+id/textView3"
        style="@style/Style_text_views"
        android:layout_width="100dp"
        android:layout_height="27dp"
        android:layout_marginTop="24dp"
        android:gravity="end"
        android:text="@string/usuario"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/etUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:background="@drawable/edt_login_register"
        android:ems="10"
        android:hint="@string/escribe_tu_nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.616"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/edt_login_register"
        android:ems="10"
        android:hint="@string/escribe_tu_usuario"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.616"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/edt_login_register"
        android:ems="10"
        android:hint="@string/escribe_tu_e_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.616"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsuario" />

    <EditText
        android:id="@+id/etContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/edt_login_register"
        android:ems="10"
        android:hint="@string/escrtibe_tu_contrase_a"
        android:inputType="textPersonName|textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <EditText
        android:id="@+id/etContrasena2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/edt_login_register"
        android:ems="10"
        android:hint="@string/repite_tu_contrase_a"
        android:inputType="textPersonName|textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etContrasena" />

    <Button
        android:id="@+id/btn_Usuario"
        android:layout_width="302dp"
        android:layout_height="41dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/botones_login_register"
        android:onClick="handleCrearUsuario"
        android:text="@string/registrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_grupo_de_sexo_uwu" />

    <RadioGroup
        android:id="@+id/rg_grupo_de_sexo_uwu"
        android:layout_width="121dp"
        android:layout_height="89dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edt_login_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etContrasena2">

        <RadioButton
            android:id="@+id/rbmujer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/mujer" />

        <RadioButton
            android:id="@+id/rbhombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hombre" />

        <RadioButton
            android:id="@+id/rbotro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/otro" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>