<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_login_register"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/tvUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/usuario"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toStartOf="@+id/etUser"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Style_text_views"/>

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/contrase_a"
        app:layout_constraintEnd_toStartOf="@+id/etPassword"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsers"
        style="@style/Style_text_views"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="237dp"
        android:layout_height="47dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/botones_login_register"
        android:onClick="handleLogin"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.715"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

    <EditText
        android:id="@+id/etUser"
        android:layout_width="238dp"
        android:layout_height="46dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/edt_login_register"
        android:ems="10"
        android:hint="@string/escribe_tu_usuario"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="238dp"
        android:layout_height="46dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edt_login_register"
        android:ems="10"
        android:hint="@string/escrtibe_tu_contrase_a"
        android:inputType="textPersonName|textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUser" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="99dp"
        android:layout_height="47dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/botones_login_register"
        android:onClick="handleRegister"
        android:text="@string/registrarse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>