<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_dark"
    tools:context=".ui.ElPost">

    <TextView
        android:id="@+id/tv_noenlallista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/animal"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/post_titulo"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_titulo_ver_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cargando"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/tv_animal_ver_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cargando"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/tv_noenlallista"
        app:layout_constraintEnd_toEndOf="@+id/tv_titulo_ver_post"
        app:layout_constraintStart_toStartOf="@+id/tv_titulo_ver_post"
        app:layout_constraintTop_toTopOf="@+id/tv_noenlallista" />

    <com.munoz.diego.projectem07.libs.ZoomableImageView
        android:id="@+id/iv_foto_ver_post"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="20dp"
        android:background="@color/background_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/autor"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/tv_noenlallista"
        app:layout_constraintTop_toBottomOf="@+id/tv_noenlallista" />

    <TextView
        android:id="@+id/tv_autor_ver_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cargando"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/tv_animal_ver_post"
        app:layout_constraintStart_toStartOf="@+id/tv_animal_ver_post"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>