<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_main">

    <Spinner
        android:id="@+id/sp_animal"
        android:layout_width="165dp"
        android:layout_height="27dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="28dp"
        android:labelFor="@id/tv_animal"
        app:layout_constraintStart_toEndOf="@+id/tv_animal"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="238dp"
        android:layout_height="159dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@color/colorPrimary" />

    <TextView
        android:id="@+id/tv_animal"
        style="@style/Style_text_views2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/animal"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/et_nombre_otro"
        android:layout_width="165dp"
        android:layout_height="40dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/tv_noenlallista"
        android:text="Name"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/tv_noenlallista"
        app:layout_constraintTop_toBottomOf="@+id/sp_animal" />

    <TextView
        android:id="@+id/tv_noenlallista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/no_lista"
        app:layout_constraintTop_toBottomOf="@+id/tv_animal"
        tools:layout_editor_absoluteX="32dp"
        />

    <Switch
        android:id="@+id/sw_no_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/no_nombre"
        app:layout_constraintTop_toBottomOf="@+id/tv_noenlallista"
        tools:layout_editor_absoluteX="29dp" />
</androidx.constraintlayout.widget.ConstraintLayout>